--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </a>
                 <ul class="ul">
                     <a href="index.html">Home</a>
-                    <a href="#">Sobre</a>
+                    <a href="sobre.html">Sobre</a>
                     <a href="servicos.html">Servicos</a>
                     <a class="btn" href="contacto.html">Contacto</a>
                 </ul>
