--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            color: #ffffff;
+            color: #4f9cf9;
             margin: 0;
             padding: 0;
             display: flex;
